# pet-jax

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
examples/i-pi/: .gitignore  README.md  input.xml  petjax_driver.py  si-diamond.xyz
src/petjax/: README.md  __init__.py  calculator.py  cli.py  convert.py  model.py  predict.py  select.py  structure.py  utils.py
tests/: conftest.py  test_calculator.py  test_predictions.py
tests/assets/: test_mini.xyz
tests/assets/predictions/: test_mini_pet-mad-s.xyz  test_mini_pet-mad-xs.xyz  test_mini_pet-mad-xs_direct.xyz
