[project]
name = "pet-jax"
version = "0.1.0"
description = "Clean JAX/Flax implementation of uPET interatomic potentials"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Marcel Langer", email = "dev@marcel.science" }]
keywords = [
    "machine-learning-interatomic-potentials",
    "jax",
    "flax",
    "pet",
    "pet-mad",
    "ase",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "flax>=0.8",
    "numpy>=1.26",
    "ase>=3.23",
    "vesin>=0.5",
    "marathon-train>=0.2.2",
]

[project.urls]
Repository = "https://github.com/lab-cosmo/pet-jax"
Issues = "https://github.com/lab-cosmo/pet-jax/issues"

[project.optional-dependencies]
convert = ["torch", "metatomic-torch", "metatrain"]

[project.scripts]
petjax-convert = "petjax.cli:convert_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/petjax"]

[tool.ruff]
line-length = 92

[tool.ruff.lint]
select = ["E", "F", "UP", "I"]
ignore = ["E741", "E731", "F722", "E402", "E501"]

[tool.ruff.lint.isort]
section-order = ["numpy", "jax", "future", "standard-library", "third-party", "typing", "first-party", "local-folder"]
no-lines-before = ["jax", "numpy"]

[tool.ruff.lint.isort.sections]
"numpy" = ["numpy"]
"jax" = ["jax", "jax.numpy"]
"typing" = ["jaxtyping", "typing"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.10",
    "tox>=4",
    "tox-uv>=1",
]
